; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_match_error.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_patterns.c_match_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.match_state = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.match_state*, i8*)* @match_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_error(%struct.match_state* %0, i8* %1) #0 {
  %3 = alloca %struct.match_state*, align 8
  %4 = alloca i8*, align 8
  store %struct.match_state* %0, %struct.match_state** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.match_state*, %struct.match_state** %3, align 8
  %6 = getelementptr inbounds %struct.match_state, %struct.match_state* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  br label %15

11:                                               ; preds = %2
  %12 = load %struct.match_state*, %struct.match_state** %3, align 8
  %13 = getelementptr inbounds %struct.match_state, %struct.match_state* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  br label %15

15:                                               ; preds = %11, %9
  %16 = phi i8* [ %10, %9 ], [ %14, %11 ]
  %17 = load %struct.match_state*, %struct.match_state** %3, align 8
  %18 = getelementptr inbounds %struct.match_state, %struct.match_state* %17, i32 0, i32 0
  store i8* %16, i8** %18, align 8
  ret i32 -1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
